# k8s-networking-restapi

./: Dockerfile  README.md  file.txt  pyproject.toml
.github/workflows/: build-and-push.yaml
sample/: main.py
